tests/snapshots/run_wpt_conformance__trtx_reduceL1_int32_4D_tensor_options_axes_with_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 int32 4D tensor options.axes with options.keepDimensions=true",
    "trtx",
    "PASS",
)
